# gui

./: ABOUT.md  Cargo.toml  README.md
.github/workflows/: release.yml
_gui/: Cargo.toml
_gui/src/: app.rs  dark_theme.rs  lib.rs  main.rs
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs  user.rs  util.rs
gui/: AscellaHost.sxcu  Cargo.toml
gui/src/: easy_mark.rs  main.rs  style.rs
lib/: Cargo.toml
lib/src/: lib.rs  util.rs
src/: ascella_config.rs  cli.rs  clipboard.rs  easy_mark.rs  main.rs  request_handler.rs  screenshots.rs  theme.rs  ui.rs  utils.rs  webserver.rs
src/screens/: history.rs  home.rs  mod.rs  settings.rs
