[package]
name = "ascella"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true

[dependencies]
eframe = "0.21"
egui_extras = "0"
egui_file = "0"
egui_tracing = { version = "0.1.0", git = "https://github.com/grievouz/egui_tracing" }
egui-notify = { version = "0.6.0", git = "https://github.com/ItsEthra/egui-notify", branch = "better-icons" }
home = "0"
bytes = "1"
color-hex = "0"
config = "0"
parking_lot = { version = "0", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["multipart", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "parking_lot",
    "sync",
    "macros",
    "process",
    "fs"
] }
chrono = "0"
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0"
toml = "0"
anyhow = "1"
toml_edit = { version = "0", features = ["serde"] }
tracing-subscriber = { version = "0", features = [
    "parking_lot",
    "once_cell",
    "tracing",
    "env-filter"
] }
clap = { version = "4", features = ["derive", "env", "cargo"] }
hyper = { version = "0.14.26", features = ["http1", "server"] }

[target.'cfg(not(linux))'.dependencies]
clipboard2 = "0"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ascella", dest = "/usr/bin/ascella", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/ascella/LICENSE", doc = true, mode = "0644" },
    { source = "README.md", dest = "/usr/share/doc/ascella/README.md", doc = true, mode = "0644" },
]

[package.metadata.appimage]

[package.metadata.deb]
license-file = ["LICENSE", "4"]
extended-description = """Ascella desktop app"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/ascella", "usr/bin/ascella", "755"],
    ["LICENSE", "usr/share/doc/ascella/LICENSE", "644"],
    ["README.md", "usr/share/doc/ascella/README.md", "644"],
]
