[package]
name = "ascella-desktop"
version = "0.5.3"
authors = ["Tricked-dev"]
edition = "2021"
homepage = "https://docs.ascella.host/ascella-desktop"
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/ascellahost/app"
description = "Ascella desktop app uploader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-dialog = "0.6.2"
rustc-hash = "1.1.0"
tokio = { version = "1.15.0", features = ["sync"] }
winit = "0.26.1"
ascella-cli = {path="../cli", features=["app"], version="0.5.2"}
iced = { version = "0.4.2", features = ["tokio", "glow"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.112"

[target.'cfg(windows)'.build-dependencies]
winapi = "0.3.9"


[package.metadata.generate-rpm]
assets = [
  { source = "target/release/ascella-desktop", dest = "/usr/bin/ascella", mode = "0755" },
  { source = "LICENSE", dest = "/usr/share/doc/ascella/LICENSE", doc = true, mode = "0644" },
  { source = "README.md", dest = "/usr/share/doc/ascella/README.md", doc = true, mode = "0644" },
]

[package.metadata.appimage]

[package.metadata.deb]
license-file = ["LICENSE", "4"]
extended-description = """Ascella desktop app"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  ["target/release/ascella-desktop", "usr/bin/ascella", "755"],
  ["LICENSE", "usr/share/doc/ascella/LICENSE", "644"],
  ["README.md", "usr/share/doc/ascella/README.md", "644"],
]
