[package]
name = "ascella-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1.4.0"
catppuccin-egui = "2.0.1"
color-hex = "0.2.0"
config = "0.13.3"
eframe = "0.21.3"
egui_extras = "0.21.0"
egui_file = "0.8"
home = "0.5.4"
parking_lot = { version = "0.12.1", features = ["serde"] }
reqwest = { version = "0.11.16", features = ["multipart", "stream"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "parking_lot",
    "sync",
    "macros",
    "process",
    "fs"
] }
egui-notify = { version = "0.6.0", git = "https://github.com/ItsEthra/egui-notify", branch = "better-icons" }
chrono = "0.4.24"
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0.1.38"
toml = "0.7.3"
anyhow = "1.0.70"
toml_edit = { version = "0.19.8", features = ["serde"] }
egui_tracing = { version = "0.1.0", git = "https://github.com/grievouz/egui_tracing" }
tracing-subscriber = { version = "0.3.17", features = [
    "parking_lot",
    "once_cell",
    "tracing",
    "env-filter"
] }

[target.'cfg(not(linux))'.dependencies]
clipboard2 = "0.1.1"
